<resources>
    <string name="app_name">jisuanqi</string>
    <string name="string1">计算器</string>
    <string name="string2">算数表达式</string>
    <string name="string3">结果</string>
    <string name="bt_1">1</string>
    <string name="bt_2">2</string>
    <string name="bt_3">3</string>
    <string name="bt_4">4</string>
    <string name="bt_5">5</string>
    <string name="bt_6">6</string>
    <string name="bt_7">7</string>
    <string name="bt_8">8</string>
    <string name="bt_9">9</string>
    <string name="bt_0">0</string>
    <string name="bt_pointt">.</string>
    <string name="bt_pluss">＋</string>
    <string name="bt_minuss">－</string>
    <string name="bt_multiplyy">×</string>
    <string name="bt_divisionn">÷</string>
    <string name="bt_runn">＝</string>
    <string name="bt_clearr">C</string>
    <string name="bt_deletee">DEL</string>
    <string name="bt_kuohaoo">()</string>
    <string name="bt_change">AN</string>

</resources>
