<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/string2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/string3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_clearr"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_divisionn"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/multiply"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_multiplyy"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_deletee"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/number7"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_7"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number8"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_8"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number9"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_9"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_minuss"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/number4"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_4"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number5"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_5"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number6"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_6"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/plus"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_pluss"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/number1"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_1"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number2"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_2"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/number3"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_3"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/kuohao"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_kuohaoo"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/number0"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_0"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/point"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_pointt"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/change"
            android:layout_width="0dp"
            android:background="#E8E8E8"
            android:text="@string/bt_change"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/run"
            android:layout_width="0dp"
            android:background="#BEBEBE"
            android:text="@string/bt_runn"
            android:textSize="30sp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>


</LinearLayout>
